// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionSet renders back 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="questionSet"
  >
    <img
      alt="Question Set 1"
      src="https://cdn.traitify.com/generic/set1.png"
    />
    <div
      className="mock"
    >
      Question
    </div>
    <div
      className="divider"
    />
    <div
      className="btnGroup"
    >
      <button
        className="btnBack"
        onClick={[MockFunction onBack]}
        type="button"
      >
        <span
          alt="Back"
          className="icon traitify--icon-fa"
          dangerouslySetInnerHTML={
            {
              "__html": "<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" class="svg-inline--fa fa-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"></path></svg>",
            }
          }
        />
        Back
      </button>
      <button
        className="traitify--confirm-button btnDisabled"
        disabled={true}
        onClick={[MockFunction onNext]}
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`QuestionSet renders component 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="questionSet"
  >
    <img
      alt="Question Set 1"
      src="https://cdn.traitify.com/generic/set1.png"
    />
    <div
      className="mock"
    >
      Question
    </div>
    <div
      className="divider"
    />
    <div
      className="btnGroup"
    >
      <div />
      <button
        className="traitify--confirm-button btnDisabled"
        disabled={true}
        onClick={[MockFunction onNext]}
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`QuestionSet renders submit 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="questionSet"
  >
    <img
      alt="Question Set 1"
      src="https://cdn.traitify.com/generic/set1.png"
    />
    <div
      className="mock"
    >
      Question
    </div>
    <div
      className="divider"
    />
    <div
      className="btnGroup"
    >
      <div />
      <button
        className="traitify--confirm-button btnDisabled"
        disabled={true}
        onClick={[MockFunction onNext]}
        type="button"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;
